# smplCUDAproj

./: CMakeLists.txt  README.md  conf_build.sh  conf_build_Debug.sh
project/src/: CMakeLists.txt  calculate.cpp  calculate.h  kernel.cu  kernel.cuh  main.cpp
test/srcCPU/: CMakeLists.txt  tests.cpp
test/srcGPU/: CMakeLists.txt  tests.cu
